WebCore

2010-03-23  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Holger Freyther.

        [GTK] Does not build with latest GTK+ development release
        https://bugs.webkit.org/show_bug.cgi?id=36398

        Fix building with newest GTK+ versions.

        * GNUmakefile.am:
        * platform/gtk/GtkPluginWidget.cpp:
        (WebCore::GtkPluginWidget::invalidateRect):
        (WebCore::GtkPluginWidget::paint):
        * platform/gtk/GtkVersioning.h: Added.
        * platform/gtk/PlatformScreenGtk.cpp:
        (WebCore::getVisual):
        (WebCore::screenRect):
        (WebCore::screenAvailableRect):
        * platform/gtk/ScrollbarGtk.cpp:
        (ScrollbarGtk::paint):
        * plugins/gtk/gtk2xtbin.c:
        (gtk_xtbin_set_position):
        (gtk_xtbin_unrealize):

WebKit/gtk

2010-03-23  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Holger Freyther.

        [GTK] Does not build with latest GTK+ development release
        https://bugs.webkit.org/show_bug.cgi?id=36398

        Fix building with newest GTK+ versions.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::windowRect):
        (WebKit::ChromeClient::setWindowRect):
        (WebKit::ChromeClient::unfocus):
        (WebKit::ChromeClient::canTakeFocus):
        (WebKit::ChromeClient::contentsSizeChanged):
        * webkit/webkitprivate.cpp:
        (currentToplevelCallback):
        * webkit/webkitwebframe.cpp:
        (webkit_web_frame_print_full):
        (webkit_web_frame_print):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_grab_focus):
        (webkit_web_view_focus_in_event):
        (webkit_web_view_script_dialog):

Canonical link: https://commits.webkit.org/47681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56387 268f45cc-cd09-0410-ab3c-d52691b4dbfc