WebCore/platform/gtk/PlatformScreenGtk.cpp
@@ -31,6 +31,7 @@
 #include "config.h"
 #include "PlatformScreen.h"
 
+#include "GtkVersioning.h"
 #include "HostWindow.h"
 #include "ScrollView.h"
 #include "Widget.h"
@@ -54,13 +55,9 @@ static GdkVisual* getVisual(Widget* widget)
     if (!container)
         return 0;
 
-    if (!GTK_WIDGET_REALIZED(container)) {
+    if (!gtk_widget_get_realized(container)) {
         GtkWidget* toplevel = gtk_widget_get_toplevel(container);
-#if GTK_CHECK_VERSION(2, 18, 0)
         if (gtk_widget_is_toplevel(toplevel))
-#else
-        if (GTK_WIDGET_TOPLEVEL(toplevel))
-#endif
             container = toplevel;
         else
             return 0;
@@ -98,11 +95,7 @@ FloatRect screenRect(Widget* widget)
         return FloatRect();
 
     GtkWidget* container = gtk_widget_get_toplevel(GTK_WIDGET(widget->root()->hostWindow()->platformPageClient()));
-#if GTK_CHECK_VERSION(2, 18, 0)
     if (!gtk_widget_is_toplevel(container))
-#else
-    if (!GTK_WIDGET_TOPLEVEL(container))
-#endif
         return FloatRect();
 
     GdkScreen* screen = gtk_widget_has_screen(container) ? gtk_widget_get_screen(container) : gdk_screen_get_default();
@@ -126,7 +119,7 @@ FloatRect screenAvailableRect(Widget* widget)
     if (!container)
         return FloatRect();
 
-    if (!GTK_WIDGET_REALIZED(container))
+    if (!gtk_widget_get_realized(container))
         return screenRect(widget);
 
     GdkDrawable* rootWindow = GDK_DRAWABLE(gtk_widget_get_root_window(container));
